--- a/src/Feedback.html
+++ b/src/Feedback.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Interview</title>
+    <title>Feedback</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="h-screen bg-blue-50 sans-serif">
@@ -14,18 +14,15 @@
         <p>johnwick@example.com</p>
       </div>
     </div>
+    <h1 class="font-semibold text-2xl ml-4 mt-10">Feedback</h1>
     <div
-      class="box-border bg-white rounded-xl shadow-md p-8 ml-4 mt-10 mr-4 mb-12 h-4/5"
+      class="box-border bg-white rounded-xl shadow-md p-8 ml-4 mt-5 mr-4 mb-12 h-3/5"
     >
-      <div
-        class="box-border h-5/6 w-auto bg-gray-100 rounded-lg p-8 ml-4 mt-10 mr-4"
-      >
-        #camara record
-      </div>
+      <div>#Feedback</div>
       <button
-        class="text-white font-poppins text-sm bg-[#0560FD] hover:bg-blue-500 py-2 px-4 rounded-xl mx-auto mt-2 h-9 w-auto flex items-center"
+        class="text-white font-poppins text-sm bg-[#0560FD] hover:bg-blue-500 py-2 px-4 rounded-xl mx-auto mt-10 h-9 w-auto flex items-center"
       >
-        Finished
+        Go Back
       </button>
     </div>
   </body>
