--- a/src/Feedback.html
+++ b/src/Feedback.html
@@ -18,9 +18,9 @@
     <div
       class="box-border bg-white rounded-xl shadow-md p-8 ml-4 mt-5 mr-4 mb-12 h-3/5"
     >
-      <div>#Feedback</div>
+      <p>Feedback</p>
       <button
-        class="text-white font-poppins text-sm bg-[#0560FD] hover:bg-blue-500 py-2 px-4 rounded-xl mx-auto mt-10 h-9 w-auto flex items-center"
+        class="text-white font-poppins text-sm bg-[#0560FD] hover:bg-blue-500 py-2 px-4 rounded-xl mx-auto mt-16 h-9 w-auto flex items-center justify-center"
       >
         Go Back
       </button>
