--- a/src/home.html
+++ b/src/home.html
@@ -18,7 +18,7 @@
         <p>johnwick@example.com</p>
       </div>
       <button
-        class="text-white font-poppins text-sm bg-[#0560FD] hover:bg-blue-500 py-2 px-4 rounded-xl mr-4 mt-2 h-9 w-auto flex items-center"
+        class="text-white text-sm bg-[#0560FD] hover:bg-blue-500 py-2 px-4 rounded-xl mr-4 mt-2 h-9 w-auto flex items-center"
       >
         Logout
       </button>
