--- a/src/admin/AnswerTab/answer-canidate.html
+++ b/src/admin/AnswerTab/answer-canidate.html
@@ -25,21 +25,21 @@
     </div>
     <div class="flex">
       <div class="flex flex-col h-full w-64 p-8">
-        <button
-          class="items-center py-2 px4 bg-[#0560FD] text-white w-40 rounded-xl"
+        <a
+          class="text-center items-center py-2 px4 bg-[#0560FD] text-white w-40 rounded-xl"
         >
           Answers
-        </button>
-        <button
-          class="items-center py-2 px4 hover:bg-[#0560FD] hover:text-white w-40 rounded-xl mt-5"
+      </a>
+        <a
+          class=" text-center items-center py-2 px4 hover:bg-[#0560FD] hover:text-white w-40 rounded-xl mt-5"
         >
           Interview
-        </button>
-        <button
-          class="items-center py-2 px4 hover:bg-[#0560FD] hover:text-white w-40 rounded-xl mt-5"
+      </a>
+        <a
+          class=" text-centeritems-center py-2 px4 hover:bg-[#0560FD] hover:text-white w-40 rounded-xl mt-5"
         >
           Canidates
-        </button>
+        </a>
       </div>
       <div
         class="bg-white rounded-xl mt-4 p-8 ml-4 mr-4 w-screen h-fit items-center"
