--- a/src/admin/InterviewTab/Intervie.html
+++ b/src/admin/InterviewTab/Intervie.html
@@ -26,12 +26,12 @@
     <div class="flex">
       <div class="flex flex-col h-full w-64 p-8">
         <a
-          class="items-center py-2 px4 bg-[#0560FD] text-white w-40 rounded-xl text-center"
+          class="items-center py-2 px4 hover:bg-[#0560FD] hover:text-white w-40 rounded-xl text-center"
         >
           Answers
         </a>
         <a
-          class="items-center py-2 px4 hover:bg-[#0560FD] hover:text-white w-40 rounded-xl mt-5 text-center"
+          class="items-center py-2 px4 bg-[#0560FD] text-white w-40 rounded-xl mt-5 text-center"
         >
           Interview
         </a>
@@ -42,15 +42,31 @@
         </a>
       </div>
       <div class="bg-white rounded-xl mt-4 p-8 ml-4 mr-4 w-screen items-center">
+        <div class="pb-10">
+          <button
+            class="py-2 px-4 bg-[#0560FD] text-white w-20 rounded-xl mt-5 text-center font-semibold"
+          >
+            View
+          </button>
+          <button
+            class="items-center py-2 px4 hover:bg-[#0560FD] hover:text-white w-20 rounded-xl text-center font-semibold"
+          >
+            Add
+          </button>
+        </div>
         <table class="min-w-full text-left text-sm font-light">
           <thead class="bg-white font-medium">
             <tr>
               <!-- <th class="tracking-wide font-medium text-gray-400 py-2 px-4 bg-gray-50 text-left rounded-tl-md rounded-bl-md">
               Group Name
             </th> -->
+              <th scope="col" class="px-6 py-4 font-bold text-gray-600">ID</th>
+              <th scope="col" class="px-6 py-4 font-bold text-gray-600">
+                Question
+              </th>
 
               <th scope="col" class="px-6 py-4 font-bold text-gray-600">
-                Group
+                Active For
               </th>
               <th
                 scope="col"
@@ -62,13 +78,29 @@
           </thead>
           <tbody>
             <tr class="bg-neutral-100 dark:border-neutral-500">
-              <td class="whitespace-nowrap px-6 py-4">Group 1</td>
+              <td class="whitespace-nowrap px-6 py-4">1</td>
+              <td class="whitespace-nowrap px-6 py-4">Introduce your self</td>
+              <td class="whitespace-nowrap px-6 py-4">1,2</td>
               <td class="whitespace-nowrap px-6 py-4 flex justify-center">
                 <form>
                   <button
                     class="hover:bg-blue-500 hover:text-white font-semibold py-1 px-4 rounded-xl"
                   >
-                    View
+                    Add Group
+                  </button>
+                </form>
+                <form>
+                 <button
+                    class="hover:bg-blue-500 hover:text-white font-semibold py-1 px-4 rounded-xl"
+                  >
+                    Remove Group
+                  </button>
+                </form>
+                <form>
+                  <button
+                    class="hover:bg-blue-500 hover:text-white font-semibold py-1 px-4 rounded-xl"
+                  >
+                    Edit
                   </button>
                 </form>
                 <form>
@@ -81,13 +113,29 @@
               </td>
             </tr>
             <tr class="bg-white">
-              <td class="whitespace-nowrap px-6 py-4">Group 2</td>
+               <td class="whitespace-nowrap px-6 py-4">4</td>
+              <td class="whitespace-nowrap px-6 py-4">What are your skills?</td>
+              <td class="whitespace-nowrap px-6 py-4">1,2</td>
               <td class="whitespace-nowrap px-6 py-4 flex justify-center">
                 <form>
                   <button
                     class="hover:bg-blue-500 hover:text-white font-semibold py-1 px-4 rounded-xl"
                   >
-                    View
+                    Add Group
+                  </button>
+                </form>
+                <form>
+                 <button
+                    class="hover:bg-blue-500 hover:text-white font-semibold py-1 px-4 rounded-xl"
+                  >
+                    Remove Group
+                  </button>
+                </form>
+                <form>
+                  <button
+                    class="hover:bg-blue-500 hover:text-white font-semibold py-1 px-4 rounded-xl"
+                  >
+                    Edit
                   </button>
                 </form>
                 <form>
@@ -100,13 +148,29 @@
               </td>
             </tr>
             <tr class="bg-neutral-100 dark:border-neutral-500">
-              <td class="whitespace-nowrap px-6 py-4">Group 3</td>
+             <td class="whitespace-nowrap px-6 py-4">15</td>
+              <td class="whitespace-nowrap px-6 py-4">Are you willing to relocate?</td>
+              <td class="whitespace-nowrap px-6 py-4">1,2</td>
               <td class="whitespace-nowrap px-6 py-4 flex justify-center">
                 <form>
                   <button
                     class="hover:bg-blue-500 hover:text-white font-semibold py-1 px-4 rounded-xl"
                   >
-                    View
+                    Add Group
+                  </button>
+                </form>
+                <form>
+                 <button
+                    class="hover:bg-blue-500 hover:text-white font-semibold py-1 px-4 rounded-xl"
+                  >
+                    Remove Group
+                  </button>
+                </form>
+                <form>
+                  <button
+                    class="hover:bg-blue-500 hover:text-white font-semibold py-1 px-4 rounded-xl"
+                  >
+                    Edit
                   </button>
                 </form>
                 <form>
@@ -117,6 +181,7 @@
                   </button>
                 </form>
               </td>
+            </tr>
             </tr>
           </tbody>
         </table>
