--- a/src/admin/InterviewTab/Add.html
+++ b/src/admin/InterviewTab/Add.html
@@ -57,7 +57,7 @@
          <h1>Number of Interview</h1>
         <div class="flex">
           <form>
-            <input title="NoInt" class="w-52 box-border border-gray-600 border-2 rounded-md mt-4 mr-4 "></input>
+            <input title="NoInt" class=" text-center w-52 box-border border-gray-600 border-2 rounded-md mt-4 mr-4 "></input>
           </form>
           <button class="text-white text-sm bg-slate-500 hover:bg-blue-500 px-2 rounded-md h-7 w-auto mt-4  ">Submit</button>
         </div>
