--- a/src/admin/CanidateTab/Edit.html
+++ b/src/admin/CanidateTab/Edit.html
@@ -41,41 +41,18 @@
           Canidates
         </a>
       </div>
-      <div class="bg-white rounded-xl mt-4 p-8 ml-4 mr-4 w-screen items-center">
-        <div class="pb-10">
-          <button
-            class="py-2 px-4 bg-gray-400 text-white hover:bg-[#0560FD] w-20 rounded-xl mt-5 text-center font-semibold"
-          >
-            Back
-          </button>
-        </div>
-         <h1>Number of Interview</h1>
-        <div class="flex">
-          <form>
-            <input title="NoInt" class=" text-center w-52 box-border border-black border rounded-md mt-4 mr-4 "></input>
-          </form>
-          <button class="text-white text-sm bg-gray-400 hover:bg-blue-500 px-2 rounded-md h-7 w-auto mt-4  ">Submit</button>
-        </div>
-        <div title="answer div" class="flex mt-10">
+      <div class="bg-white rounded-xl mt-4 p-8 ml-4 mr-4 w-screen ">
         <div>
-          <h1 class="pt-4">Question</h1>
-          <form>
-            <input title="Name" class="w-52 box-border border-black border rounded-md mt-2 mr-4 text-center "/>
-          </form>
-      </div>
-      <div class="flex flex-col items-center">
-        <h1 class="pt-4">Answer limit</h1>
+            <h1>Question</h1>
+            <form>
+            <input title="QT" class="border-2 h-9 mt-3  w-full border-gray-400 rounded-md"></input>
+        </form>
+        <h1 class="mt-4">Group Name</h1>
         <form>
-            <input title="Name" class="w-16 box-border border-black border rounded-md mt-2 mr-4 text-center "/>
-          </form>
-      </div>
-       
-    </div>
-    <button
-        class="text-white  text-sm bg-[#0560FD] hover:bg-blue-500 py-2 px-4 rounded-xl mx-auto mt-16 h-9 w-auto flex items-center justify-center"
-      >
-        Submit
-      </button>
+            <input title="GT" class="border-2 h-9 mt-3 w-full border-gray-400 rounded-md"></input>
+        </form>
+        <button  class="text-white font-poppins text-sm bg-[#0560FD] hover:bg-blue-500 py-2 px-4 rounded-xl mx-auto mt-8 h-9 w-auto flex items-center">Submit</button>
+        </div>
     </div>
   </body>
 </html>
