--- a/src/admin/CanidateTab/Add.html
+++ b/src/admin/CanidateTab/Add.html
@@ -36,18 +36,33 @@
           Interview
         </a>
         <a
-         class="items-center py-2 px4 bg-[#0560FD] text-white w-40 rounded-xl mt-5 text-center"
+          class="items-center py-2 px4 bg-[#0560FD] text-white w-40 rounded-xl mt-5 text-center"
         >
           Canidates
         </a>
       </div>
-      <div class="bg-white rounded-xl mt-4 p-8 ml-4 mr-4 w-screen ">
-        <button
+      <div class="bg-white rounded-xl mt-4 p-8 ml-4 mr-4 w-screen items-center">
+        <div class="pb-10">
+          <button
             class="py-2 px-4 bg-gray-400 hover:bg-[#0560FD] text-white w-20 rounded-xl mt-5 text-center font-semibold"
           >
             Back
           </button>
-       <div class="flex mt-10">
+        </div>
+        <h1>Number of Canidates</h1>
+        <div class="flex">            
+            <form>
+                <input title="NoCAd" class="w-36 box-border border-gray-300 border rounded-md mt-2 mr-4 text-center "/>
+            </form>
+            <button class="text-white text-sm bg-gray-400 hover:bg-blue-500 px-2 rounded-md h-6 w-auto mt-2">Submit</button>
+        </div>
+         <h1 class="mt-6">Group Name</h1>
+        <div class="flex">            
+            <form>
+                <input title="NoCAd" class="w-36 box-border border-gray-300 border rounded-md mt-2 mr-4 text-center "/>
+            </form>
+        </div>
+            <div class="flex mt-10">
                 <div>
                     <h2>Name</h2>
                     <form>
@@ -84,8 +99,8 @@
             <button
         class="text-white  text-sm bg-[#0560FD] hover:bg-blue-500 py-2 px-4 rounded-xl mx-auto mt-16 h-9 w-auto flex items-center justify-center"
       >
-        Update
+        Submit
       </button>
-    </div>
+
   </body>
 </html>
