--- a/src/admin/Login.html
+++ b/src/admin/Login.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    /> -->
+    <link rel="stylesheet" href="/tem.css" />
   </head>
   <body
     class="w-auto h-auto font-sans;"
