--- a/src/admin/InterviewTab/Intervie.html
+++ b/src/admin/InterviewTab/Intervie.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Interview</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      @import url("https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap");
-    </style>
   </head>
   <body class="h-screen bg-blue-50 sans-serif">
     <div class="flex h-20 w-auto bg-white justify-between items-center">
