--- a/src/admin/InterviewTab/Edit.html
+++ b/src/admin/InterviewTab/Edit.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>IntEdit</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      @import url("https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap");
-    </style>
   </head>
   <body class="h-screen bg-blue-50 sans-serif">
     <div class="flex h-20 w-auto bg-white justify-between items-center">
@@ -73,7 +70,7 @@
             </form>
                 </div>
                 <div>
-                    <label for="status">Status</label>
+                  <h2>Status</h2>
                 <select title="status" class="box-border border border-gray-300 rounded-md mt-2">
                     <option value="Active">Active</option>
                     <option value="Deactive">Deactive</option>
